--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       }
 
       // Email setup
-      const email = "YOUR_FRIEND_EMAIL@example.com"; // 👈 change this!
+      const email = "premanandhan@gmail.com"; // 👈 change this!
       const subject = encodeURIComponent("New Tour Request");
       const body = encodeURIComponent(
         `Name: ${name}\nMobile: ${mobile}\nFrom: ${from}\nTo: ${to}`
