--- a/index.html
+++ b/index.html
@@ -114,11 +114,14 @@
       );
       window.location.href = `mailto:${email}?subject=${subject}&body=${body}`;
     });
-
-    // Register service worker for PWA
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("service-worker.js");
-    }
   </script>
+  <script>
+    // Register service worker for PWA
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js')
+      .then(() => console.log('Service worker registered.'));
+    }
+</script>
+
 </body>
 </html>
